# XORFileProcessor

./: CMakeLists.txt  FileProcessor.cpp  FileProcessor.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  resource.qrc
